# otus-cpp-05

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  annotated.html  annotated_dup.js  bintray.json  classes.html  classtintenschaft_1_1Canvas-members.html  classtintenschaft_1_1Canvas.html  classtintenschaft_1_1Canvas.js  classtintenschaft_1_1Canvas_1_1UnknownShape-members.html  classtintenschaft_1_1Canvas_1_1UnknownShape.html  classtintenschaft_1_1Canvas_1_1UnknownShape.js  classtintenschaft_1_1Canvas_1_1UnknownShape__coll__graph.md5  classtintenschaft_1_1Canvas_1_1UnknownShape__inherit__graph.map  classtintenschaft_1_1Canvas_1_1UnknownShape__inherit__graph.md5  classtintenschaft_1_1Canvas__coll__graph.map  classtintenschaft_1_1Canvas__coll__graph.md5  classtintenschaft_1_1Canvas__inherit__graph.map  classtintenschaft_1_1Canvas__inherit__graph.md5  classtintenschaft_1_1Canvas_a58bbdbb831ecdc8d9cb5fea6b6e0cebb_cgraph.map  classtintenschaft_1_1Canvas_a58bbdbb831ecdc8d9cb5fea6b6e0cebb_cgraph.md5  classtintenschaft_1_1Canvas_a71c19e2f05e26fa355c3236a59571737_icgraph.map  classtintenschaft_1_1Canvas_a71c19e2f05e26fa355c3236a59571737_icgraph.md5  classtintenschaft_1_1Canvas_aa19e2a4b0d032ae4086d73da23819957_cgraph.map  classtintenschaft_1_1Canvas_aa19e2a4b0d032ae4086d73da23819957_cgraph.md5  classtintenschaft_1_1Canvas_ae00bcc279ad7b44fc64925246c4f0b2d_cgraph.md5  classtintenschaft_1_1Color-members.html  classtintenschaft_1_1Color.html  classtintenschaft_1_1Color.js  classtintenschaft_1_1Color_a7dec252240cace7970597ed28591a445_cgraph.map  classtintenschaft_1_1Color_a7dec252240cace7970597ed28591a445_cgraph.md5  classtintenschaft_1_1Color_ae4c18033a045926b00e8f89d514328e0_icgraph.map  classtintenschaft_1_1Color_ae4c18033a045926b00e8f89d514328e0_icgraph.md5  classtintenschaft_1_1Dot-members.html  classtintenschaft_1_1Dot.html  classtintenschaft_1_1Dot.js  classtintenschaft_1_1Dot__coll__graph.map  classtintenschaft_1_1Dot__coll__graph.md5  (+109 more)
inc/: controller.h  main_window.h  model.h  shape.h  sketch.h  view.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+15 more)
src/: main.cpp
